<resources>
    <string name="app_name">Hackathon</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_contact">Contact</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="base_url">http://10.1.26.38:3000</string>
    <string name="title_activity_main">Phonetection</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logout">Logout</string>
    <string name="start_text">You might be at risk! Protect yourself.</string>
    <string name="stop_text">You\'re life is safe at our hands. :)</string>
    <string name="detect">We detected a crash.\nWere we wrong?</string>
    <string name="hint_blood">Blood Group</string>
    <string name="hint_emergency">Emergency Contact</string>
</resources>
